# straif

./: .editorconfig  .gitignore  .oxfmtrc.json  73319473-914d-4d37-9719-d27dc6ea4c2d.png.import  LICENSE  PRODUCT.md  README.md  \  bhop.gd  bhop.tscn  compose.yaml  curl-format.txt  default_bus_layout.tres  export_presets.cfg  gdformatrc  gdlintrc  icon.svg.import  lefthook.yml  level_select.gd  level_select.tscn  longjump.tscn  maps.json  notify.gd  package.json  packet.gd  player.gd  player.tscn  pnpm-lock.yaml  project.godot  prototype.png.import  requirements-dev.txt  run.gd  save.gd  scene_manager.gd  settings-dev.json  settings-prod.json  settings.gd  steam.gd  stylebox.tres  test.tscn  (+3 more)
docs/: README.md  (+9 more)
server/: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dockerignore  build.rs  compose.yaml  package.json  pnpm-lock.yaml  rustfmt.toml  tsconfig.json
server/drizzle/: 0000_bouncy_archangel.sql  0000_chubby_selene.sql  0001_purple_tattoo.sql  0001_unknown_valkyrie.sql
server/migrations/: 20240418223503_creation.sql  20240501161347_run-times.sql  20240515181351_steam.sql  20240515182614_steam2.sql  20240515182708_steam3.sql  20240516022845_steam.sql  20240516024311_steam.sql  20240516024411_steam.sql  20240516024617_steam.sql  20240518201537_steam.sql  20240519164950_longjump_demo.sql  20240519165314_longjump_demo.sql  20240519170453_longjump_demo.sql  20240519203741_optimization.sql  20240519204315_optimization.sql
server/scripts/: populate.js
server/src/: aim_leaderboard.test.ts  aim_leaderboard.ts  endless_leaderboard.test.ts  endless_leaderboard.ts  error.rs  index.ts  leaderboard_pagination.test.ts  leaderboard_pagination.ts  main.rs  maps.ts  middleware.test.ts  middleware.ts  migrate.ts  players.ts  setup.rs  steam.rs  world_records.test.ts  world_records.ts
(+906 files in other folders)
