[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["json", "macros"] }
bcrypt = "0.15.1"
serde = { version = "1.0.198", features = ["derive"] }
serde_valid = "0.19.0"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "uuid"] }
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.8.0", features = ["serde"] }
validator = { version = "0.18.1", features = ["derive"] }

